<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:id="@+id/ImeiLayout"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imei"
            android:id="@+id/imei" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="15"
            android:id="@+id/editText_imei"
            android:layout_weight="1"
            android:singleLine="true" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_imei" /-->

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/SnLayout"
        android:layout_below="@+id/ImeiLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            android:id="@+id/sn" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_sn"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_sn" /-->

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/MacLayout"
        android:layout_below="@+id/SnLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac"
            android:id="@+id/mac" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_mac"
            android:maxLength="12"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_mac" /-->
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/BtLayout"
        android:layout_below="@+id/MacLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BT"
            android:id="@+id/bt" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_bt"
            android:maxLength="12"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_bt" /-->
    </LinearLayout>
    <![CDATA[
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/BrandLayout"
        android:layout_below="@+id/BtLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:id="@+id/brand" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_brand"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_brand" /-->
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/ModelLayout"
        android:layout_below="@+id/BrandLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:id="@+id/model" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_model"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_model" /-->
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/SwVerLayout"
        android:layout_below="@+id/ModelLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_ver"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_version"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_version" /-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/AndroidVerLayout"
        android:layout_below="@+id/SwVerLayout"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_ver"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_android_version"
            android:layout_weight="1" />

        <!--Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_android_version" /-->
    </LinearLayout>
    ]]>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/ConrolLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/BtLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:id="@+id/button_write" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:id="@+id/button_read" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reboot"
            android:id="@+id/button_reboot" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/StatusLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ConrolLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/status" />
    </LinearLayout>
</RelativeLayout>